# src/types/userQueryOptions.ts
@@ -1,12 +1,6 @@
+import type { QueryOptions } from "./queryOptions.js";
 
-export type SearchableProperty = "username" | "firstName" | "lastName" | "createdBy" | "createdAt" | "realName";
-export type SortableProperty = "id" | SearchableProperty;
+export type SearchableProperty = "username" | "firstName" | "lastName" | "realName" | "createdBy";
+export type SortableProperty = "id" | "username" | "firstName" | "lastName" | "createdBy" | "createdAt";
 
-export interface UserQueryOptions {
-    offset: undefined | number,
-    limit: undefined | number,
-    searchBy: undefined | SearchableProperty,
-    search: undefined | string,
-    orderBy: undefined | SortableProperty,
-    sortDescending: undefined |boolean
-};
+export type UserQueryOptions = QueryOptions<SearchableProperty, SortableProperty>;
